@@ -14,7 +14,9 @@ Internal - indicates an internal change - information for FRD developers - nothi
 
 
 FreeRapid Downloader 0.85 Update 1
-  Added : support for deleting files to recycle bin - you have to enable it manually in startup.properties file
+  Added : Support for deleting files to recycle bin - you have to enable it manually in startup.properties file for now
+  Added : Plugin API
+           - ScriptUtils class for easy JavaScript manipulation
   Changed: Internal - enhanced ESET antivirus detection, which is blocking FRD to start
   Changed: Internal - enhanced detection of not writable plugins directory
   Changed: Internal - list of languages is represented in file languages.xml, languages.properties was removed
